Update privacy policy with account deletion section

--- a/ar/policies/privacy-policy-business.html
+++ b/ar/policies/privacy-policy-business.html
@@ -102,8 +102,11 @@
     <nav>
       <a href="../index.html">الصفحة الرئيسية</a>
 
+      <!-- Account deletion anchor (same as English behavior) -->
+      <a href="#account-deletion">حذف الحساب</a>
+
       <!-- Contact opens the user's default email app -->
-      <a href="mailto:info@damacode.com?subject=ZAM%20Calendar%20Business%20Support">للتواصل</a>
+      <a href="mailto:support@zamcalendar.com?subject=ZAM%20Calendar%20Business%20Support">للتواصل</a>
     </nav>
   </header>
 
@@ -146,26 +149,30 @@
       يتم حفظها على تقويم آبل الرسمي -أو في حساب iCloud الخاص بك إذا كان مفعّلًا-.
       لا يمكننا الاطلاع على بيانات أحداثك، ولا نقوم بتحميلها أو تخزينها على خوادمنا.<br>
       • التخزين عبر iCloud: إذا اخترت تفعيل مزامنة iCloud، فسيتم تخزين بيانات أحداثك الشخصية في تقويم آبل الرسمي وحساب iCloud الخاص بك.
-      تتم هذه العملية بالكامل من خلال Apple وتخضع لسياسات الخصوصية الخاصة بها.</p>
+      تتم هذه العملية بالكامل من خلال Apple وتخضع لسياسات الخصوصية الخاصة بها.
+    </p>
 
     <!-- Kept from the Arabic version (as baseline), with business context still valid -->
     <p><strong>لا يتم جمع أي بيانات تحدد هويتك بشكل مباشر</strong><br>
       المعلومات التي تقدمها أدناه تظل مجهولة تمامًا ولا يمكن ربطها بهويتك. يتم استخدامها فقط لضمان عمل التطبيق كما هو مطلوب، وتشمل ما يلي:<br>
       • الدولة: تُحدد بناءً على اختيارك، وتُستخدم لتوفير تقويم الاجازات الوطنية، ويتضمن العطلات الرسمية الخاصة بدولتك.<br>
-      • اسم الشركة: يُحدد بناءً على اختيارك، ويُستخدم لإنشاء إجازات الشركة في التقويم و تعكس التقويم الخاص بشركتك.<br>
+      • اسم الشركة: يُحدد بناءً على اختيارك، ويُستخدم لإنشاء إجازات الشركة في التقويم و تعكس التقويم الخاص بشركتك.
+    </p>
 
     <p>تبقى جميع هذه المعلومات مجهولة الهوية تمامًا، وتُستخدم حصريًا لتحسين تجربة استخدام التطبيق.</p>
 
     <!-- Updated: Google Analytics (Business) -->
     <p><strong>تحليلات الاستخدام</strong><br>
       نستخدم Google Analytics لجمع معلومات استخدام مجهولة (مثل الصفحات التي يتم عرضها) لمساعدتنا في تحسين التطبيق.
-      لا يتم جمع أي بيانات شخصية—فقط بيانات استخدام مجهولة لتحسين التجربة.</p>
+      لا يتم جمع أي بيانات شخصية—فقط بيانات استخدام مجهولة لتحسين التجربة.
+    </p>
 
     <!-- Kept from the Arabic version -->
     <p><strong>المزامنة والنسخ الاحتياطي</strong><br>
       يمكنك استخدام التطبيق بالكامل على جهازك. إذا كنت ترغب في نسخ بياناتك احتياطيًا أو مزامنتها عبر أجهزتك التي تعمل بنظام iOS،
       يمكنك تفعيل مزامنة iCloud. عند القيام بذلك، يتم نقل بياناتك وتخزينها في حساب iCloud الخاص بك.
-      تتم إدارة هذه العملية بالكامل بواسطة خدمة iCloud من Apple وتخضع لسياسات الخصوصية الخاصة بـ Apple.</p>
+      تتم إدارة هذه العملية بالكامل بواسطة خدمة iCloud من Apple وتخضع لسياسات الخصوصية الخاصة بـ Apple.
+    </p>
 
     <!-- Kept from the Arabic version -->
     <p><strong>حقوقك</strong><br>
@@ -174,14 +181,32 @@
       • الحق في الوصول: يمكنك طلب الاطلاع على البيانات التي نحتفظ بها حيثما ينطبق ذلك.<br>
       • الحق في التصحيح: إذا كان هناك خطأ في بياناتك، يمكنك طلب تصحيحه.<br>
       • الحق في الحذف: يمكنك طلب حذف بياناتك عندما يكون ذلك مناسبًا.<br>
-      • الحق في سحب الموافقة: يمكنك إيقافنا عن معالجة بياناتك في أي وقت.</p>
+      • الحق في سحب الموافقة: يمكنك إيقافنا عن معالجة بياناتك في أي وقت.
+    </p>
 
     <p>لممارسة أي من هذه الحقوق، يرجى الاتصال بنا باستخدام التفاصيل المذكورة أدناه.</p>
+
+    <!-- Added: Account Deletion (mirrors the English version structure) -->
+    <p id="account-deletion"><strong>حذف الحساب</strong></p>
+    <p>
+      إذا كنت ترغب في طلب حذف الحساب / حذف البيانات، يرجى التواصل معنا عبر البريد الإلكتروني.
+    </p>
+    <ul>
+      <li>
+        راسلنا على:
+        <a href="mailto:support@zamcalendar.com?subject=Delete%20my%20account">support@zamcalendar.com</a>
+      </li>
+      <li>
+        استخدم عنوان الرسالة التالي:
+        <strong>Delete my account</strong>
+      </li>
+    </ul>
 
     <!-- Kept from the Arabic version -->
     <p><strong>التحديثات</strong><br>
       قد نقوم بتحديث سياسة الخصوصية هذه في أي وقت. سيتم نشر أي تغييرات على هذه الصفحة.
-      يرجى مراجعة هذه السياسة بانتظام للبقاء على اطلاع.</p>
+      يرجى مراجعة هذه السياسة بانتظام للبقاء على اطلاع.
+    </p>
 
     <p><strong>للتواصل</strong></p>
     <p>
@@ -192,7 +217,7 @@
     </p>
 
     <div class="divider"></div>
-    <p class="muted">تاريخ آخر تحديث: <span>28 يناير 2026</span></p>
+    <p class="muted">تاريخ آخر تحديث: <span>2 فبراير 2026</span></p>
   </main>
 
   <footer>
